--- a/www/reading.html
+++ b/www/reading.html
@@ -53,6 +53,11 @@ Instructions on use can be found in the README repository.
             bottom: 20px;
             right: 20px;
           }
+          #prediction {
+            position: absolute;
+            bottom: 40px;
+            right: 20px;
+          }
           #spacebar {
             position: absolute;
             bottom: 20px;
@@ -113,6 +118,7 @@ Instructions on use can be found in the README repository.
         </div>
       </div>
       <div id="timer"></div>
+      <div id="prediction"></div>
       <b id="spacebar">SPACE</b>
 
       <canvas id="plotting_canvas" width="500" height="500" style="cursor:crosshair;"></canvas>
