mirror video feed for reading.html

--- a/www/reading.html
+++ b/www/reading.html
@@ -47,6 +47,11 @@ Instructions on use can be found in the README repository.
             right: 0;
             margin: 1% auto;
             text-align: center;
+            -moz-transform: scale(-1, 1);
+            -webkit-transform: scale(-1, 1);
+            -o-transform: scale(-1, 1);
+            transform: scale(-1, 1);
+            filter: FlipH;
           }
           #timer {
             position: absolute;
