Moved regression outside of predict

--- a/www/calibration.html
+++ b/www/calibration.html
@@ -47,6 +47,7 @@ Instructions on use can be found in the README repository.
                 <li id="Accuracy"><a>Not yet Calibrated</a></li>
                 <li><a onclick="Restart()" href="#">Recalibrate</a></li>
                 <li><a onclick="window.applyKalmanFilter = !window.applyKalmanFilter" href="#">Toggle Kalman Filter</a></li>
+                <li><a onclick="webgazer.getRegression()[0].regress()" href="#">Regress</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li><button class="helpBtn" data-toggle="modal" data-target="#helpModal"><a data-toggle="modal"><span class="glyphicon glyphicon-cog"></span> Help</a></li>
