--- a/www/targets.html
+++ b/www/targets.html
@@ -38,15 +38,15 @@
             ];
 
             var errorPoints = [
-                new TargetPoint(0.47, 0.47)
-                // new TargetPoint(0.1, 0.05),
-                // new TargetPoint(0.76, 0.05),
-                // new TargetPoint(0.95, 0.55),
-                // new TargetPoint(0.35, 0.95),
-                // new TargetPoint(0.85, 0.33),
-                // new TargetPoint(0.12, 0.33),
-                // new TargetPoint(0.30, 0.1),
-                // new TargetPoint(0.60, 0.20)
+                new TargetPoint(0.47, 0.47),
+                new TargetPoint(0.1, 0.05),
+                new TargetPoint(0.76, 0.05),
+                new TargetPoint(0.95, 0.55),
+                new TargetPoint(0.35, 0.95),
+                new TargetPoint(0.85, 0.33),
+                new TargetPoint(0.12, 0.33),
+                new TargetPoint(0.30, 0.1),
+                new TargetPoint(0.60, 0.20)
             ];
 
             // var ts = new Targets(points, 'error', 20);
