--- a/www/videodemo.html
+++ b/www/videodemo.html
@@ -50,11 +50,10 @@ Instructions on use can be found in the README repository.
                   <li id="Accuracy"><a>Not yet Calibrated</a></li>
                   <li><a onclick="Restart()" href="#">Recalibrate</a></li>
                   <li><a onclick="window.applyKalmanFilter = !window.applyKalmanFilter" href="#">Toggle Kalman Filter</a></li>
-                  <li><a onclick="webgazer.getRegression()[0].regress()" href="#">Regress</a></li>
+                  <li><a onclick="webgazer.getRegression()[0].regress(); document.getElementById('webgazerVideoFeed').style.display = 'none'; document.getElementById('webgazerFaceOverlay').style.display = 'none'; document.getElementById('webgazerFaceFeedbackBox').style.display = 'none';" href="#">Regress</a></li>
                   <li><a onclick="webgazer.clearData()" href="#">Clear Data</a></li>
-                  <li><a onclick="var ts = new Targets(calibrationPoints, 'calibration', 5); ts.start()" href="#">Calibrate</a></li>
+                  <li><a onclick="var ts = new Targets(calibrationPoints, 'calibration', 5); ts.start(); document.getElementById('webgazerVideoFeed').style.display = 'none'; document.getElementById('webgazerFaceOverlay').style.display = 'none'; document.getElementById('webgazerFaceFeedbackBox').style.display = 'none';" href="#">Calibrate</a></li>
                   <li><a onclick="var ts = new Targets(errorPoints, 'error', 20); ts.start()" href="#">Test Error</a></li>
-                  <li><a onclick="document.getElementById('webgazerVideoFeed').style.display = 'none'; document.getElementById('webgazerFaceOverlay').style.display = 'none'; document.getElementById('webgazerFaceFeedbackBox').style.display = 'none';" href="#">Hide Video Feed</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   <li><button class="helpBtn" data-toggle="modal" data-target="#helpModal"><a data-toggle="modal"><span class="glyphicon glyphicon-cog"></span> Help</a></li>
