--- a/www/calibration.html
+++ b/www/calibration.html
@@ -52,6 +52,7 @@ Instructions on use can be found in the README repository.
                   <li><a onclick="webgazer.clearData()" href="#">Clear Data</a></li>
                   <li><a onclick="var ts = new Targets(calibrationPoints, 'calibration', 5); ts.start()" href="#">Calibrate</a></li>
                   <li><a onclick="var ts = new Targets(errorPoints, 'error', 20); ts.start()" href="#">Test Error</a></li>
+                  <li><input type="file" id="input" onchange="webgazer.setCalibration(this);"></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   <li><button class="helpBtn" data-toggle="modal" data-target="#helpModal"><a data-toggle="modal"><span class="glyphicon glyphicon-cog"></span> Help</a></li>
