--- a/www/calibration.html
+++ b/www/calibration.html
@@ -79,15 +79,21 @@ Instructions on use can be found in the README repository.
           <script type="text/javascript">
             // moveTarget(100,100);
             var calibrationPoints = [
-                new TargetPoint(0.5, 0.5),
-                new TargetPoint(0.5, 0.05),
-                new TargetPoint(0.95, 0.05),
-                new TargetPoint(0.95, 0.5),
-                new TargetPoint(0.95, 0.95),
-                new TargetPoint(0.5, 0.95),
-                new TargetPoint(0.05, 0.95),
-                new TargetPoint(0.05, 0.5),
-                new TargetPoint(0.05, 0.05)
+                // new TargetPoint(0.5, 0.5),
+                // new TargetPoint(0.5, 0.05),
+                // new TargetPoint(0.95, 0.05),
+                // new TargetPoint(0.95, 0.5),
+                // new TargetPoint(0.95, 0.95),
+                // new TargetPoint(0.5, 0.95),
+                // new TargetPoint(0.05, 0.95),
+                // new TargetPoint(0.05, 0.5),
+                // new TargetPoint(0.05, 0.05)
+                new TargetPoint(0.05, 0.35),
+                new TargetPoint(0.35, 0.35),
+                new TargetPoint(0.5, 0.35),
+                new TargetPoint(0.65, 0.35),
+                new TargetPoint(0.95, 0.35)
+
             ];
 
             var errorPoints = [ // change these to fit the window better
