--- a/www/reading.html
+++ b/www/reading.html
@@ -14,6 +14,7 @@ Instructions on use can be found in the README repository.
         <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
         <TITLE>Eyetracking for Readability</TITLE>
         <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <link rel="stylesheet" type="text/css" href="./css/targets.css">
         <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Comic+Neue">
         <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -75,8 +76,19 @@ Instructions on use can be found in the README repository.
       <div id="toggle-button">
         <button onclick="toggleTextLayout()">Toggle Text Layout</button>
       </div>
-      
+      <script src="./js/targets.js"></script>
       <script>
+            var calibrationPoints = [
+                new TargetPoint(0.5, 0.5),
+                new TargetPoint(0.5, 0.05),
+                new TargetPoint(0.95, 0.05),
+                new TargetPoint(0.95, 0.5),
+                new TargetPoint(0.95, 0.95),
+                new TargetPoint(0.5, 0.95),
+                new TargetPoint(0.05, 0.95),
+                new TargetPoint(0.05, 0.5),
+                new TargetPoint(0.05, 0.05)
+            ];
         var textLayoutMode = 0;
         var toggleTextLayout = function() {
           textLayoutMode = (textLayoutMode + 1) % 3;
@@ -84,14 +96,47 @@ Instructions on use can be found in the README repository.
             case 0:
               document.getElementById("text-col").style.width = "250px";
               document.getElementById("text-col").style.float = "left";
+              // calibrationPoints = [
+              //   new TargetPoint(150/1440, 800/1440),
+              //   new TargetPoint(150/1440, 500/1440),
+              //   new TargetPoint(300/1440, 500/1440),
+              //   new TargetPoint(300/1440, 800/1440),
+              //   new TargetPoint(300/1440, 1100/1440),
+              //   new TargetPoint(150/1440, 1100/1440),
+              //   new TargetPoint(0/1440, 1100/1440),
+              //   new TargetPoint(0/1440, 800/1440),
+              //   new TargetPoint(0/1440, 500/1440)
+              // ];
               break;
             case 1:
               document.getElementById("text-col").style.width = "250px";
               document.getElementById("text-col").style.float = "none";
+              // calibrationPoints = [
+              //   new TargetPoint(720/1440, 450/900),
+              //   new TargetPoint(720/1440, 400/900),
+              //   new TargetPoint(1435/1440, 400/900),
+              //   new TargetPoint(1435/1440, 450/900),
+              //   new TargetPoint(1435/1440, 500/900),
+              //   new TargetPoint(720/1440, 500/900),
+              //   new TargetPoint(5/1440, 500/900),
+              //   new TargetPoint(5/1440, 450/900),
+              //   new TargetPoint(5/1440, 400/900)
+              // ];
               break;
             case 2:
               document.getElementById("text-col").style.width = "100%";
               document.getElementById("text-col").style.float = "none";
+              // calibrationPoints = [
+              //   new TargetPoint(720/1440, 350/900),
+              //   new TargetPoint(720/1440, 300/900),
+              //   new TargetPoint(1435/1440, 300/900),
+              //   new TargetPoint(1435/1440, 350/900),
+              //   new TargetPoint(1435/1440, 400/900),
+              //   new TargetPoint(720/1440, 400/900),
+              //   new TargetPoint(5/1440, 400/900),
+              //   new TargetPoint(5/1440, 350/900),
+              //   new TargetPoint(5/1440, 300/900)
+              // ];
               break;
           }
           
