--- a/www/reading.html
+++ b/www/reading.html
@@ -137,6 +137,11 @@ Instructions on use can be found in the README repository.
               //   new TargetPoint(5/1440, 350/900),
               //   new TargetPoint(5/1440, 300/900)
               // ];
+              calibrationPoints = [
+                new TargetPoint(720/1440, 350/900),
+                new TargetPoint(1435/1440, 350/900),
+                new TargetPoint(5/1440, 350/900)
+              ];
               break;
           }
           
