--- a/www/reading.html
+++ b/www/reading.html
@@ -78,7 +78,15 @@ Instructions on use can be found in the README repository.
       </div>
       <script src="./js/targets.js"></script>
       <script>
-            var calibrationPoints = [
+            var calibrationPoints;
+        var textLayoutMode = 0;
+        var toggleTextLayout = function() {
+          textLayoutMode = (textLayoutMode + 1) % 3;
+          switch(textLayoutMode) {
+            case 0:
+              document.getElementById("text-col").style.width = "250px";
+              document.getElementById("text-col").style.float = "left";
+              calibrationPoints = [
                 new TargetPoint(0.5, 0.5),
                 new TargetPoint(0.5, 0.05),
                 new TargetPoint(0.95, 0.05),
@@ -89,58 +97,31 @@ Instructions on use can be found in the README repository.
                 new TargetPoint(0.05, 0.5),
                 new TargetPoint(0.05, 0.05)
             ];
-        var textLayoutMode = 0;
-        var toggleTextLayout = function() {
-          textLayoutMode = (textLayoutMode + 1) % 3;
-          switch(textLayoutMode) {
-            case 0:
-              document.getElementById("text-col").style.width = "250px";
-              document.getElementById("text-col").style.float = "left";
-              // calibrationPoints = [
-              //   new TargetPoint(150/1440, 800/1440),
-              //   new TargetPoint(150/1440, 500/1440),
-              //   new TargetPoint(300/1440, 500/1440),
-              //   new TargetPoint(300/1440, 800/1440),
-              //   new TargetPoint(300/1440, 1100/1440),
-              //   new TargetPoint(150/1440, 1100/1440),
-              //   new TargetPoint(0/1440, 1100/1440),
-              //   new TargetPoint(0/1440, 800/1440),
-              //   new TargetPoint(0/1440, 500/1440)
-              // ];
               break;
             case 1:
-              document.getElementById("text-col").style.width = "250px";
+              document.getElementById("text-col").style.width = "90%";
               document.getElementById("text-col").style.float = "none";
-              // calibrationPoints = [
-              //   new TargetPoint(720/1440, 450/900),
-              //   new TargetPoint(720/1440, 400/900),
-              //   new TargetPoint(1435/1440, 400/900),
-              //   new TargetPoint(1435/1440, 450/900),
-              //   new TargetPoint(1435/1440, 500/900),
-              //   new TargetPoint(720/1440, 500/900),
-              //   new TargetPoint(5/1440, 500/900),
-              //   new TargetPoint(5/1440, 450/900),
-              //   new TargetPoint(5/1440, 400/900)
-              // ];
+              calibrationPoints = [
+                new TargetPoint(0.5, 0.39),
+                new TargetPoint(0.5, 0.33),
+                new TargetPoint(0.95, 0.33),
+                new TargetPoint(0.95, 0.39),
+                new TargetPoint(0.95, 0.45),
+                new TargetPoint(0.5, 0.45),
+                new TargetPoint(0.05, 0.45),
+                new TargetPoint(0.05, 0.39),
+                new TargetPoint(0.05, 0.33)
+              ];
               break;
             case 2:
               document.getElementById("text-col").style.width = "100%";
               document.getElementById("text-col").style.float = "none";
-              // calibrationPoints = [
-              //   new TargetPoint(720/1440, 350/900),
-              //   new TargetPoint(720/1440, 300/900),
-              //   new TargetPoint(1435/1440, 300/900),
-              //   new TargetPoint(1435/1440, 350/900),
-              //   new TargetPoint(1435/1440, 400/900),
-              //   new TargetPoint(720/1440, 400/900),
-              //   new TargetPoint(5/1440, 400/900),
-              //   new TargetPoint(5/1440, 350/900),
-              //   new TargetPoint(5/1440, 300/900)
-              // ];
               calibrationPoints = [
-                new TargetPoint(720/1440, 350/900),
-                new TargetPoint(1435/1440, 350/900),
-                new TargetPoint(5/1440, 350/900)
+                new TargetPoint(0.98, 0.39),
+                new TargetPoint(0.75, 0.39),
+                new TargetPoint(0.5, 0.39),
+                new TargetPoint(0.25, 0.39),
+                new TargetPoint(0.2, 0.39)
               ];
               break;
           }
