testing stuff for reading demos

--- a/www/test.html
+++ b/www/test.html
@@ -26,7 +26,7 @@ Instructions on use can be found in the README repository.
         </style>
     </head>
     <body LANG="en-US" LINK="#0000ff" DIR="LTR">
-        <video id="vid" src="./seq1.mp4" type="video/mp4"></video>
+        <!-- <video id="vid" src="./seq1.mp4" type="video/mp4"></video>
 
         <canvas id="myCanvas" width="320" height="240"></canvas>
         <script type="text/javascript">
@@ -72,7 +72,9 @@ Instructions on use can be found in the README repository.
             loop();
 
 
-        </script>
+        </script> -->
+        <script src="./node_modules/exif-js/exif.js"></script>
+        <script src="./js/test.js"></script>
 
     </body>
 </html>
