--- a/www/reading.html
+++ b/www/reading.html
@@ -78,7 +78,17 @@ Instructions on use can be found in the README repository.
       </div>
       <script src="./js/targets.js"></script>
       <script>
-            var calibrationPoints;
+        var calibrationPoints = [
+            new TargetPoint(0.5, 0.5),
+            new TargetPoint(0.5, 0.05),
+            new TargetPoint(0.98, 0.05),
+            new TargetPoint(0.98, 0.5),
+            new TargetPoint(0.98, 0.95),
+            new TargetPoint(0.5, 0.95),
+            new TargetPoint(0.02, 0.95),
+            new TargetPoint(0.02, 0.5),
+            new TargetPoint(0.02, 0.05)
+        ];
         var textLayoutMode = 0;
         var toggleTextLayout = function() {
           textLayoutMode = (textLayoutMode + 1) % 3;
@@ -87,15 +97,15 @@ Instructions on use can be found in the README repository.
               document.getElementById("text-col").style.width = "250px";
               document.getElementById("text-col").style.float = "left";
               calibrationPoints = [
-                new TargetPoint(0.5, 0.5),
-                new TargetPoint(0.5, 0.05),
-                new TargetPoint(0.95, 0.05),
-                new TargetPoint(0.95, 0.5),
-                new TargetPoint(0.95, 0.95),
-                new TargetPoint(0.5, 0.95),
-                new TargetPoint(0.05, 0.95),
-                new TargetPoint(0.05, 0.5),
-                new TargetPoint(0.05, 0.05)
+                new TargetPoint(0.11, 0.54),
+                new TargetPoint(0.11, 0.33),
+                new TargetPoint(0.2, 0.33),
+                new TargetPoint(0.2, 0.54),
+                new TargetPoint(0.2, 0.75),
+                new TargetPoint(0.11, 0.75),
+                new TargetPoint(0.02, 0.75),
+                new TargetPoint(0.02, 0.54),
+                new TargetPoint(0.02, 0.33)
             ];
               break;
             case 1:
@@ -121,7 +131,7 @@ Instructions on use can be found in the README repository.
                 new TargetPoint(0.75, 0.39),
                 new TargetPoint(0.5, 0.39),
                 new TargetPoint(0.25, 0.39),
-                new TargetPoint(0.2, 0.39)
+                new TargetPoint(0.02, 0.39)
               ];
               break;
           }
@@ -153,7 +163,7 @@ Instructions on use can be found in the README repository.
           </p>
         </div>
       </div>
-      <div id="timer"></div>
+      <!-- <div id="timer"></div> -->
       <div id="prediction"></div>
       <b id="spacebar">SPACE</b>
 
