--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='http://hci.pomona.edu/WebGazer/www/calibration.html?'" />
+    <meta http-equiv="refresh" content="0; url='https://hci.pomona.edu/WebGazer/www/calibration.html?'" />
   </head>
   <body>
-    <p>Please follow <a href="http://hci.pomona.edu/WebGazer/www/calibration.html?">this link</a>.</p>
+    <p>Please follow <a href="https://hci.pomona.edu/WebGazer/www/calibration.html?">this link</a>.</p>
   </body>
 </html>
