--- a/www/calibration.html
+++ b/www/calibration.html
@@ -48,7 +48,7 @@ Instructions on use can be found in the README repository.
                   <li id="Accuracy"><a>Not yet Calibrated</a></li>
                   <li><a onclick="Restart()" href="#">Recalibrate</a></li>
                   <li><a onclick="window.applyKalmanFilter = !window.applyKalmanFilter" href="#">Toggle Kalman Filter</a></li>
-                  <li><a onclick="webgazer.getRegression()[0].regress()" href="#">Regress</a></li>
+                  <li><a onclick="webgazer.trainModel()" href="#">Train Model</a></li>
                   <li><a onclick="webgazer.clearData()" href="#">Clear Data</a></li>
                   <li><a onclick="var ts = new Targets(calibrationPoints, 'calibration', 5); ts.start()" href="#">Calibrate</a></li>
                   <li><a onclick="var ts = new Targets(errorPoints, 'error', 20); ts.start()" href="#">Test Error</a></li>
@@ -77,7 +77,7 @@ Instructions on use can be found in the README repository.
           </div>
 
           <script type="text/javascript">
-            // moveTarget(100,100);
+            // Basic 9 pt calibration
             var calibrationPoints = [
                 new TargetPoint(0.5, 0.5),
                 new TargetPoint(0.5, 0.05),
@@ -90,7 +90,8 @@ Instructions on use can be found in the README repository.
                 new TargetPoint(0.05, 0.05)
             ];
 
-            var errorPoints = [ // change these to fit the window better
+            // Basic 25 pt test
+            var errorPoints = [
                 new TargetPoint(0.5, 0.5),
                 new TargetPoint(0.7, 0.5),
                 new TargetPoint(0.7, 0.3),
